fix : tests for align